<resources>
    <string name="app_name">Propify</string>
    <string name="developer_name">G Shreeniketh</string>
    <string name="powered_by">Powered By\n</string>
    <string name="find_invest_thrive">\nFind. Invest. Thrive.</string>
    <string name="logo">Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_account_register">No Account <b>Register</b>?</string>
    <string name="have_account_login">Have Account <b>Login?</b></string>
    <string name="didn_t_receive_otp_resend">Didn\'t Receive OTP? <b>Resend</b></string>
    <string name="verify_otp">Verify OTP</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="login_to_your_account1">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password_recover">Forgot Password? <b>Recover</b></string>
    <string name="back_image_button">Back Image Button</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_enter_your_registered_email_we_will_send_password_recovery_instruction_to_it">Forgot Password? Enter Your registered email, we will send password recovery instruction to it.</string>
    <string name="email_forgot_password">Email</string>
    <string name="submit">Submit</string>
    <string name="skip_n">Skip Now</string>
    <string name="continue_with_phone_number">Continue with phone number</string>
    <string name="or_continue_with">or continue with</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="name">Name</string>
    <string name="dob_dd_mm_yyyy">DOB(dd/MM/yyyy)</string>
    <string name="update">Update</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="preferences">Preferences</string>
    <string name="account_status">Account Status</string>
    <string name="looking_to_sell_or_rent_out_your_property">Looking to sell or rent out your property?</string>
    <string name="post_an_ad">Post an Ad</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="verify_account">Verify Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="to_change_password_you_must_verify_its_really_you_by_entering_your_current_password_your_new_password_must_be_different_from_current_password">To Change Password you must verify its really you by entering your current password. Your new password must be different from current password.</string>
    <string name="new_password">New Password</string>
    <string name="submit_new_password">Submit New Password</string>
    <string name="reach_thousands_of_the_buyers_tenants_nquickly">Reach thousands of the buyers/tenants\nQuickly</string>
    <string name="purpose">Purpose</string>
    <string name="homes">Homes</string>
    <string name="plots">Plots</string>
    <string name="commercial">Commercial</string>
    <string name="bed_Rooms">Bed Rooms</string>
    <string name="my_maps_api_key">AIzaSyCJcYyaHhJlJLvzQeuA1HNYw-AvQmUDo6g</string>
    <string name="rupee_symbol">₹</string>
    <string name="search_Ads">Search the Listings</string>
    <string name="search_properties">Search Properties</string>
</resources>