<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:id="@+id/toolbarRl"
        android:background="@drawable/toolbar_bg02">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarBackBtn"
            android:contentDescription="@string/back_image_button"
            android:src="@drawable/back_white"
            android:background="@color/black_trans"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarTitleTv"
            android:textSize="20sp"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/profileIv"
            android:src="@drawable/person_black"
            android:background="?attr/colorOnPrimary"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle"
            android:layout_below="@+id/toolbarTitleTv"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarDescriptionTv"
            style="@style/TextAppearance.Material3.LabelSmall"
            android:text="@string/forgot_password_enter_your_registered_email_we_will_send_password_recovery_instruction_to_it"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_below="@+id/profileIv"
            android:textColor="@color/white"
            android:paddingHorizontal="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarRl"
        android:padding="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailEt"
            android:background="@drawable/edittext_border"
            android:layout_marginTop="10dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/email_forgot_password"
            android:textSize="20sp"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:drawableStart="@drawable/email_white"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submitBtn"
            android:layout_alignParentBottom="true"
            android:minHeight="@dimen/m_button_height"
            android:text="@string/submit"
            android:backgroundTint="@color/black"
            android:textAlignment="center"
            app:icon="@drawable/key_white"/>
    </RelativeLayout>
</RelativeLayout>