<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginPhoneActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/toolbarRl"
        android:background="@drawable/toolbar_bg02">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarBackBtn"
            android:src="@drawable/back_white"
            android:backgroundTint="@color/black_trans"
            android:padding="10dp"
            app:tint="?attr/colorOnPrimary" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/profileIv"
            android:background="?attr/colorOnPrimary"
            android:src="@drawable/person_black"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/loginPhoneLabel"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:text="@string/login_to_your_account"
            android:textColor="?attr/colorOnPrimary"
            android:layout_below="@+id/profileIv"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneInputRl"
        android:padding="10dp"
        android:visibility="visible">

        <com.hbb20.CountryCodePicker
            android:id="@+id/phoneCodeTil"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            app:ccp_autoDetectCountry="true"
            app:ccp_contentColor="@color/grey"
            app:ccp_rememberLastSelection="true"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false" />

        <EditText
            android:id="@+id/phoneNumberEt"
            android:layout_width="298dp"
            android:layout_height="50dp"
            android:background="@drawable/edittext_border"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/phoneCodeTil"
            android:drawableStart="@drawable/phone_black"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendOtpBtn"
            android:minHeight="10dp"
            android:layout_below="@+id/phoneNumberEt"
            android:text="@string/send_otp"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/otpInputRl"
        android:padding="10dp"
        android:visibility="visible">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:background="@drawable/edittext_border"
                android:maxLength="6"
                android:id="@+id/otpEt"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/otp"
                app:startIconDrawable="@drawable/phone_black"
                android:drawableStart="@drawable/phone_black"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verifyOtpBtn"
            android:minHeight="@dimen/m_button_height"
            android:layout_below="@+id/otpEt"
            android:backgroundTint="@color/black"
            android:layout_marginTop="10dp"
            android:text="@string/verify_otp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resendOtpTv"
            android:textSize="17sp"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:text="@string/didn_t_receive_otp_resend"
            android:padding="5dp"
            android:textColor="@color/black"
            android:layout_below="@+id/verifyOtpBtn"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
        
</LinearLayout>