<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginEmailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/toolbarRl"
        android:background="@drawable/toolbar_bg02">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarBackBtn"
            android:src="@drawable/back_white"
            android:background="@color/black_trans"
            android:padding="10dp"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/profileIv"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="15dp"
            android:background="?attr/colorOnPrimary"
            android:src="@drawable/person_black"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginLabelTv"
            android:textSize="20sp"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:text="@string/login_to_your_account1"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/profileIv"
            android:textColor="?attr/colorOnPrimary"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarRl"
        android:padding="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailEt"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                android:background="@drawable/edittext_border"
                android:padding="20dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                app:hintTextColor="@color/white"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/email_white"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTl"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:startIconDrawable="@drawable/lock_black"
            app:startIconTint="@android:color/black"
            android:hint="@string/password"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/emailEt"> <!-- Maintained layout structure -->

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordEt"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background="@drawable/edittext_border"
                android:padding="20dp"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noAccountTv"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:text="@string/no_account_register"
            android:textColor="@color/black"
            android:layout_below="@+id/passwordTl"
            android:drawablePadding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotPasswordTv"
            android:layout_marginTop="10dp"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:text="@string/forgot_password_recover"
            android:textSize="15sp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_below="@+id/passwordTl"
            android:layout_alignParentEnd="true"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtnTv"
            android:backgroundTint="@color/black"
            android:minHeight="@dimen/m_button_height"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            app:icon="@drawable/key_white" />

    </RelativeLayout>

</RelativeLayout>