<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.RegisterEmailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/toolbarRl"
        android:background="@drawable/toolbar_bg02">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarBackBtn"
            android:src="@drawable/back_white"
            android:background="@color/black_trans"
            android:padding="10dp"
            app:tint="?attr/colorOnPrimary" />
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/profileIv"
            android:src="@drawable/person_black"
            android:layout_centerHorizontal="true"
            android:background="?attr/colorOnPrimary"
            android:layout_marginVertical="15dp"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerLabelTv"
            android:textSize="20sp"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:text="@string/create_a_new_account"
            android:textColor="?attr/colorOnPrimary"
            android:layout_below="@+id/profileIv"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarRl"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailEt"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:background="@drawable/edittext_border"
            android:padding="20dp"
            android:textColorHint="@color/black"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/email_white"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTl"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:startIconDrawable="@drawable/lock_black"
            app:startIconTint="@android:color/black"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            android:layout_below="@+id/emailEt"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordEt"
                android:background="@drawable/edittext_border"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cpasswordTl"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:startIconDrawable="@drawable/lock_black"
            app:startIconTint="@android:color/black"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            android:layout_below="@+id/passwordTl"
            android:layout_marginTop="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cpasswordEt"
                android:background="@drawable/edittext_border"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/haveAccountTv"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_below="@+id/cpasswordTl"
            android:textSize="17sp"
            android:text="@string/have_account_login"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerBtn"
            android:minHeight="@dimen/m_button_height"
            android:backgroundTint="@color/black"
            android:text="@string/register"
            app:icon="@drawable/key_white"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</RelativeLayout>