<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_"
    tools:context=".activities.LoginOptionsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_option1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="30dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black_trans"
        android:text="@string/skip_n"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPhoneBtn"
            app:icon="@drawable/phone_black"
            android:backgroundTint="@color/black"
            android:text="@string/continue_with_phone_number"
            android:textColor="@color/white"
            android:minHeight="@dimen/m_button_height"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:dividerColor="@color/white"
                app:dividerThickness="2dp"
                android:layout_toStartOf="@+id/continueWithLabelTv"/>
            <TextView
                android:id="@+id/continueWithLabelTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_continue_with"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                app:dividerColor="@color/white"
                app:dividerThickness="2dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/continueWithLabelTv"
                android:layout_centerVertical="true" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/moreOptionsLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginEmailBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:backgroundTint="@color/black"
                android:minHeight="@dimen/m_button_height"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                app:icon="@drawable/email_black"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginGoogleBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Google"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:minHeight="@dimen/m_button_height"
                android:layout_marginStart="5dp"
                app:icon="@drawable/google_black"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>